--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -483,8 +483,8 @@
               <h3 class="resource-card-title">Others</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    ></a
+                  <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Learn"
+                    >Learn Web Development</a
                   >
                 </li>
               </ul>
@@ -709,20 +709,13 @@
                   VsCode Online
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
+                      <a target="_blank" href="https://vscode.dev/"
+                        >Website</a
+                      >
+                    </li>
+                    <li class="resource-link">
                       <a target="_blank" href="https://code.visualstudio.com/docs/editor/vscode-web"
-                        >Editor</a
-                      >
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
-                      >
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
+                        >Documentation</a
                       >
                     </li>
                   </ul>
@@ -739,21 +732,8 @@
                   Dcoder
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
-                      >
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
-                      >
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
+                      <a target="_blank" href="https://play.google.com/store/apps/details?id=com.paprbit.dcoder"
+                        >Download here</a
                       >
                     </li>
                   </ul>
@@ -763,21 +743,8 @@
                   Visual Code
                   <ul class="resource-link-sublinks">
                     <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
-                      >
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
-                      >
-                    </li>
-                    <li class="resource-link">
-                      <a target="_blank" href="#"
-                        >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                        elit.</a
+                      <a target="_blank" href="https://play.google.com/store/apps/details?id=lk.visual.code.mobile"
+                        >Download here</a
                       >
                     </li>
                   </ul>
@@ -808,21 +775,28 @@
               <h3 class="resource-card-title"> Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/qz0aGYrrlhU"
+                    >Html Tutorial for beginners - Crash course.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/UB1O30fR-EE"
+                    >Html crash course for absolute beginners.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/yfoY53QXEnI"
+                    >Css crash course for absolute beginners.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/vQWlgd7hV4A"
+                    >Learn Html and Css for beginners - Crash course.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/mU6anWqZJcc"
+                    >Html and Css full course fron scratch - Full course.</a
                   >
                 </li>
               </ul>
@@ -833,21 +807,18 @@
               <h3 class="resource-card-title"> Playlist</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9ivBf_eKCPIAYXWzLlPAm6G"
+                    >Html and Css Crash course Tutorial</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLWKjhJtqVAbnSe1qUNMG7AbPmjIG54u88"
+                    >Html and Css Tutorials.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLillGF-RfqbZTASqIqdvm1R5mLrQq79CU"
+                    >Html and Css.</a
                   >
                 </li>
               </ul>
@@ -855,28 +826,13 @@
 
             <!-- paid courses -->
             <div class="resource-card">
-              <h3 class="resource-card-title">Paid Courses</h3>
+              <h3 class="resource-card-title">Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://www.freecodecamp.org/learn/responsive-web-design/"
+                    >Responsive Website Design from Free Code Camp.</a
                   >
-                  <span class="resource-link-badge">Udemy</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Coursera</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Skillshare</span>
+                  <span class="resource-link-badge">Free</span>
                 </li>
               </ul>
             </div>
@@ -886,21 +842,13 @@
               <h3 class="resource-card-title">Articles</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://blog.timonwa.com/using-css-variables-like-a-pro"
+                    >Using CSS Variables like a Pro.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://blog.timonwa.com/all-vs-root-vs-html-vs-body-selectors"
+                    >All vs root vs html vs body selectors.</a
                   >
                 </li>
               </ul>
@@ -911,21 +859,18 @@
               <h3 class="resource-card-title">Practice Projects</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLt5nFcZSSiWVptXtYJssP6K3HoSl0cp-O"
+                    >Html and Css Projects.</a
                   >
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    >100+ Complete Responsive Website Designs </a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://www.frontendmentor.io/challenges"
+                    >Frontend Challenges by Frontend Mentor</a
                   >
                 </li>
               </ul>
@@ -934,14 +879,13 @@
             <!-- others -->
             <div class="resource-card">
               <h3 class="resource-card-title">Others</h3>
-              <p class="resource-card-body">Tips, Tricks, Concepts, etc.</p>
+              <p class="resource-card-body">Useful websites, Tips, Tricks, Concepts, etc.</p>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://www.w3schools.com/"
+                    >W3Schools - Learn to code online with an online editor.</a
                   >
-                  <span class="resource-link-badge">Google Drive</span>
+                  <span class="resource-link-badge">Website</span>
                 </li>
                 <li class="resource-link">
                   <a target="_blank" href="#"
