--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -821,10 +821,15 @@
                     >Html and Css.</a
                   >
                 </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL7TLF4T4Tq2RCWa-ZRkEWXVtXteyZ2CjK"
+                    >Css3 Full Tutorial.</a
+                  >
+                </li>
               </ul>
             </div>
 
-            <!-- paid courses -->
+            <!-- courses -->
             <div class="resource-card">
               <h3 class="resource-card-title">Courses</h3>
               <ul class="resource-card-links">
@@ -864,11 +869,6 @@
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >100+ Complete Responsive Website Designs </a
-                  >
-                </li>
-                <li class="resource-link">
                   <a target="_blank" href="https://www.frontendmentor.io/challenges"
                     >Frontend Challenges by Frontend Mentor</a
                   >
@@ -888,18 +888,10 @@
                   <span class="resource-link-badge">Website</span>
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/c/OnlineTutorials4Designers"
+                    >Online Tutorials.</a
                   >
-                  <span class="resource-link-badge">Article</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Document</span>
+                  <span class="resource-link-badge">Youtube Channel</span>
                 </li>
               </ul>
             </div>
@@ -922,21 +914,33 @@
               <h3 class="resource-card-title"> Videos</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/3YW65K6LcIA"
+                    >Css Flexbox crash course.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/tXIhdp5R7sc"
+                    >Css Flexbox crash course.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/EFafSYg-PkI"
+                    >Css Grid crash course.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/t6CBKf8K_Ac"
+                    >Grid crash course.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/LCEgHntqBps"
+                    >Learn Css animation Tutorial.</a
+                  >
+                </li>
+                <li class="resource-link">
+                  <a target="_blank" href="https://youtu.be/srvUrASNj0s"
+                    >Learn Responsive Web Design</a
                   >
                 </li>
               </ul>
@@ -947,50 +951,33 @@
               <h3 class="resource-card-title">Curated Playlist</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL4cUxeGkcC9iGYgmEd2dm3zAKzyCGDtM5"
+                    >Css Animations Tutorial.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PLqGj3iMvMa4LvJ8VctoXnPI0dtE40wfid"
+                    >Css Animations series.</a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtube.com/playlist?list=PL7TLF4T4Tq2RCWa-ZRkEWXVtXteyZ2CjK"
+                    >Css3 Full Tutorial.</a
                   >
                 </li>
               </ul>
             </div>
 
-            <!-- paid courses -->
+            <!-- courses -->
             <div class="resource-card">
-              <h3 class="resource-card-title">Paid Courses</h3>
+              <h3 class="resource-card-title">Courses</h3>
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
-                  <span class="resource-link-badge">Udemy</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Coursera</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Skillshare</span>
+                  <span class="resource-link-badge"></span>
+      
                 </li>
               </ul>
             </div>
@@ -1001,20 +988,7 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
                 </li>
               </ul>
@@ -1026,20 +1000,12 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    >100+ Complete Responsive Website Designs </a
                   >
                 </li>
                 <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                  <a target="_blank" href="https://youtu.be/vNc2s-ic1cc"
+                    >6 handy Css animation projects.</a
                   >
                 </li>
               </ul>
@@ -1052,24 +1018,9 @@
               <ul class="resource-card-links">
                 <li class="resource-link">
                   <a target="_blank" href="#"
-                    >Link 1, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
+                    ></a
                   >
-                  <span class="resource-link-badge">Video</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 2, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Article</span>
-                </li>
-                <li class="resource-link">
-                  <a target="_blank" href="#"
-                    >Link 3, ipsum dolor sit, amet consectetur adipisicing
-                    elit.</a
-                  >
-                  <span class="resource-link-badge">Document</span>
+                  <span class="resource-link-badge"></span>
                 </li>
               </ul>
             </div>
