--- a/html/careers/frontend.html
+++ b/html/careers/frontend.html
@@ -486,6 +486,7 @@
                   <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Learn"
                     >Learn Web Development</a
                   >
+                  <span class="resource-link-badge">Website</span>
                 </li>
               </ul>
             </div>
