--- a/html/careers.html
+++ b/html/careers.html
@@ -135,6 +135,17 @@
         </div>
       </nav>
 
+      <!-- * banner -->
+      <header class="banner career-page-image">
+        <div class="banner-wrapper">
+          <h1>The different Careers in Tech</h1>
+          <p
+            >Roadmaps, articles and resources to help you choose a career path,
+            start your journey and grow in tech.</p
+          >
+        </div>
+      </header>
+
       <main>
         <!--* intro -->
         <section class="intro">
