Added header to contribute page.

--- a/html/contribute.html
+++ b/html/contribute.html
@@ -135,6 +135,16 @@
         </div>
       </nav>
 
+      <!-- * banner -->
+      <header class="banner contribute-page-image">
+        <div class="banner-wrapper">
+          <h1>Contribute to this Project</h1>
+          <p
+            >"Alone we can do so little; together we can do so much." – Helen Keller</p
+          >
+        </div>
+      </header>
+
       <main>
         <!--* intro -->
         <section class="intro">
