Removed header title in careers page and replaced body with quotes.

--- a/html/careers.html
+++ b/html/careers.html
@@ -138,10 +138,8 @@
       <!-- * banner -->
       <header class="banner career-page-image">
         <div class="banner-wrapper">
-          <h1>Careers in Tech</h1>
           <p
-            >Roadmaps, articles and resources to help you choose a career path,
-            start your journey and grow in tech.</p
+            >"A year from now you may wish you had started today." – Karen Lamb</p
           >
         </div>
       </header>
