--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </nav>
 
       <!-- * banner -->
-      <header class="banner">
+      <header class="banner home-page-image">
         <div class="banner-wrapper">
           <h1>Tech Career Road Map</h1>
           <p
