fixed careers page section bug.

--- a/html/careers.html
+++ b/html/careers.html
@@ -139,7 +139,8 @@
       <header class="banner career-page-image">
         <div class="banner-wrapper">
           <p
-            >"A year from now you may wish you had started today." – Karen Lamb</p
+            >"A year from now you may wish you had started today." – Karen
+            Lamb</p
           >
         </div>
       </header>
@@ -162,14 +163,12 @@
                 officiis fugit fuga maiores beatae alias, rem porro magni
                 aliquid at?</p
               >
-            <p>Not sure which career to pick? You can use the resources below as guides.</p>
-            
-            </div>
-
-          
+              <p
+                >Not sure which career to pick? You can use the resources below
+                as guides.</p
+              >
             </div>
           </div>
-
         </section>
 
         <!-- * careers section -->
