formated the main css.

--- a/html/careers.html
+++ b/html/careers.html
@@ -136,7 +136,7 @@
       </nav>
 
       <!-- * banner -->
-      <header class="banner career-page-image">
+      <header class="banner career-page-banner">
         <div class="banner-wrapper">
           <p
             >"A year from now you may wish you had started today." – Karen
@@ -244,14 +244,14 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This <a class="para-links" href="#">project</a> is OpenSource. All
-              contributions are welcome to grow this project and don't need to
-              know how to code to contribute.</p
+              This <a class="paragraph-links" href="#">project</a> is
+              OpenSource. All contributions are welcome to grow this project and
+              don't need to know how to code to contribute.</p
             >
             <p
               >You can contribute as a
-              <a class="para-links" href="#">developer here</a> or a
-              <a class="para-links" href="#">non-developer here</a>.</p
+              <a class="paragraph-links" href="#">developer here</a> or a
+              <a class="paragraph-links" href="#">non-developer here</a>.</p
             >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
@@ -282,8 +282,9 @@
 
           <div class="sections attribution">
             <p
-              ><a class="para-links" href="/">Tech Roadmap</a> is created by
-              <a class="para-links" href="https://github.com/timonwa"
+              ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
+              by
+              <a class="paragraph-links" href="https://github.com/timonwa"
                 >Timonwa</a
               ></p
             >
