changed footer color and added coypright icon.

--- a/html/contribute.html
+++ b/html/contribute.html
@@ -201,20 +201,24 @@
 
       <footer>
         <div class="footer-wrapper">
+          <!-- footer nav links -->
           <div class="sections">
             <ul class="footer-links">
-              <li><a class="footer-link" href="/">Home</a></li>
+              <li><a class="footer-link para-link" href="/">Home</a></li>
               <li>
-                <a class="footer-link" href="/html/careers.html">Careers</a>
+                <a class="footer-link para-link" href="/html/careers.html"
+                  >Careers</a
+                >
               </li>
               <li>
-                <a class="footer-link" href="/html/contribute.html"
+                <a class="footer-link para-link" href="/html/contribute.html"
                   >Contribute</a
                 >
               </li>
             </ul>
           </div>
 
+          <!-- attribution -->
           <div class="sections attribution">
             <p
               ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
@@ -225,6 +229,7 @@
             >
           </div>
 
+          <!-- website quote -->
           <div class="sections quote">
             <p
               >Roadmaps, articles and resources to help you choose a career
@@ -232,8 +237,9 @@
             </p>
           </div>
 
-          <div class="sections">
-            <p><i class="fa fa-copyright" aria-hidden="true"> 2022</i> </p>
+          <!-- copyright -->
+          <div class="sections copyright">
+            <p><span class="material-icons-outlined"> copyright </span> 2022</p>
           </div>
         </div>
       </footer>
