--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 
       <footer>
         <div class="footer-wrapper">
+          <!-- footer nav links -->
           <div class="sections">
             <ul class="footer-links">
               <li><a class="footer-link para-link" href="/">Home</a></li>
@@ -272,6 +273,7 @@
             </ul>
           </div>
 
+          <!-- attribution -->
           <div class="sections attribution">
             <p
               ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
@@ -282,6 +284,7 @@
             >
           </div>
 
+          <!-- website quote -->
           <div class="sections quote">
             <p
               >Roadmaps, articles and resources to help you choose a career
@@ -289,8 +292,9 @@
             </p>
           </div>
 
-          <div class="sections">
-            <p><i class="fa fa-copyright" aria-hidden="true"> 2022</i> </p>
+          <!-- copyright -->
+          <div class="sections copyright">
+            <p><span class="material-icons-outlined"> copyright </span> 2022</p>
           </div>
         </div>
       </footer>
