replaced dummy text with content.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="banner-wrapper">
           <h1>Tech Career Road Map</h1>
           <p
-            >Roadmaps, articles and resources to help you choose a career path,
+            >Roadmaps, articles and useful resources to help you choose a career path,
             start your journey and grow in tech.</p
           >
         </div>
@@ -146,16 +146,13 @@
             <h2 class="heading">Welcome!</h2>
             <div class="intro__body">
               <p
-                >Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Inventore nobis voluptate doloribus deserunt maxime quos,
-                quibusdam aperiam magni incidunt eos enim, laborum nam odio
-                placeat ut consequuntur aut dolorem sint!</p
+                >Tech Roadmap is a free online resource on careers in the tech industry. Anyone who wants to break or transition into the tech industry or has already broken into it, can use these resources to choose and define their career path and learn about the skills needed to build themselves in the chosen career.</p
               >
               <p
-                >Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem
-                odio debitis aut natus dolorem esse. Aliquam, qui odit deserunt
-                officiis fugit fuga maiores beatae alias, rem porro magni
-                aliquid at?</p
+                >It lets you have access to collections of ebooks, courses, videos, articles, guides, tools, etc on the different careers in tech including the no-code jobs. So if you are just starting your career or have yet to choose a career path, then you are in the right place.</p
+              >
+              <p
+                >You can click on one of the career cards  below if you have already chosen a career path or go to our <a class="paragraph-links" href="#">careers page</a> if you need help in deciding the one to choose.</p
               >
             </div>
           </div>
@@ -287,7 +284,7 @@
           <!-- website quote -->
           <div class="sections quote">
             <p
-              >Roadmaps, articles and resources to help you choose a career
+              >Roadmaps, articles and useful resources to help you choose a career
               path, start your journey and grow in tech.
             </p>
           </div>
