Updated opensource card

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <!-- * banner -->
       <header class="banner home-page-banner">
         <div class="banner-wrapper">
-          <h1>Tech Career Road Map</h1>
+          <h1>Tech Career Roadmap</h1>
           <p
             >Roadmaps, articles and useful resources to help you choose a career path,
             start your journey and grow in tech.</p
@@ -149,7 +149,7 @@
                 >Tech Roadmap is a free online resource on careers in the tech industry. Anyone who wants to break or transition into the tech industry or has already broken into it, can use these resources to choose and define their career path and learn about the skills needed to build themselves in the chosen career.</p
               >
               <p
-                >It lets you have access to collections of ebooks, courses, videos, articles, guides, tools, etc on the different careers in tech including the no-code jobs. So if you are just starting your career or have yet to choose a career path, then you are in the right place.</p
+                >Here you have access to collections of ebooks, courses, videos, articles, guides, tools, etc on the different careers in tech including the no-code jobs. So if you are just starting your career or have yet to choose a career path, then you are in the right place.</p
               >
               <p
                 >You can click on one of the career cards  below if you have already chosen a career path or go to our <a class="paragraph-links" href="#">careers page</a> if you need help in deciding the one to choose.</p
@@ -231,14 +231,10 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This <a class="paragraph-links" href="#">project</a> is
-              OpenSource. All contributions are welcome to grow this project and
-              don't need to know how to code to contribute.</p
+              This project is OpenSource and it is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and don't need to know how to code to contribute.</p
             >
             <p
-              >You can contribute as a
-              <a class="paragraph-links" href="#">developer here</a> or a
-              <a class="paragraph-links" href="#">non-developer here</a>.</p
+              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
             >
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
