--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="title" content="Tech Roadmap" />
     <meta
       name="description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website" />
@@ -22,7 +22,7 @@
     <meta property="og:title" content="Tech Roadmap" />
     <meta
       property="og:description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
     <meta property="og:image" content="1200px to 627px less than 5mb" />
     <!-- Twitter Meta Tags -->
@@ -31,7 +31,7 @@
     <meta property="twitter:title" content="Tech Roadmap" />
     <meta
       property="twitter:description"
-      content="Begin your career in Tech. Roadmaps, articles and resources to help you choose a career path, start your journey and grow in tech."
+      content="Begin your career in Tech. Roadmaps, articles, and resources to help you choose a career path, start your journey and grow in tech."
     />
     <meta property="twitter:image" content="1200px to 627px less than 5mb" />
 
@@ -48,9 +48,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined"
     />
-    <!-- FontAwesome offline -->
-    <!-- <link rel="stylesheet" href="/fontawesome5.15/Css/all.css" /> -->
-
+    
     <!--* CSS -->
     <!--* CSS (resets) -->
     <!-- Normalize.css -->
@@ -133,7 +131,7 @@
         <div class="banner-wrapper">
           <h1>Tech Career Roadmap</h1>
           <p
-            >Roadmaps, articles and useful resources to help you choose a career path,
+            >Roadmaps, articles, and useful resources to help you choose a career path,
             start your journey and grow in tech.</p
           >
         </div>
@@ -152,7 +150,7 @@
                 >Here you have access to collections of ebooks, courses, videos, articles, guides, tools, etc on the different careers in tech including the no-code jobs. So if you are just starting your career or have yet to choose a career path, then you are in the right place.</p
               >
               <p
-                >You can click on one of the career cards  below if you have already chosen a career path or go to our <a class="paragraph-links" href="#">careers page</a> if you need help in deciding the one to choose.</p
+                >You can click on one of the career cards below if you have already chosen a career path or go to our <a class="paragraph-links" href="#">careers page</a> if you need help in deciding the one to choose.</p
               >
             </div>
           </div>
@@ -190,7 +188,7 @@
               <div class="careers__card">
                 <h3>Android/Mobile</h3>
                 <p
-                  >Curated guide and resources to becoming a android/mobile
+                  >Curated guide and resources to becoming an android/mobile
                   developer.</p
                 >
               </div>
@@ -231,7 +229,7 @@
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
             <p>
-              This project is OpenSource and it is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and don't need to know how to code to contribute.</p
+              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
             >
             <p
               >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
@@ -280,8 +278,8 @@
           <!-- website quote -->
           <div class="sections quote">
             <p
-              >Roadmaps, articles and useful resources to help you choose a career
-              path, start your journey and grow in tech.
+              >Roadmaps, articles, and useful resources to help you choose a career
+              path, start your journey, and grow in tech.
             </p>
           </div>
 
