Updated opensource and footer contents

--- a/html/careers.html
+++ b/html/careers.html
@@ -243,16 +243,12 @@
         <div class="opensource-wrapper">
           <h2 class="heading">Open Source</h2>
           <div class="opensource__body">
-            <p>
-              This <a class="paragraph-links" href="#">project</a> is
-              OpenSource. All contributions are welcome to grow this project and
-              don't need to know how to code to contribute.</p
+           <p>
+              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
             >
             <p
-              >You can contribute as a
-              <a class="paragraph-links" href="#">developer here</a> or a
-              <a class="paragraph-links" href="#">non-developer here</a>.</p
-            >
+              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
+            > 
             <p style="display: none">
               A considerable amount of my time is spent doing unpaid community
               work on things that I hope will help humanity in some way. Your
@@ -297,8 +293,7 @@
           <!-- website quote -->
           <div class="sections quote">
             <p
-              >Roadmaps, articles and resources to help you choose a career
-              path, start your journey and grow in tech.
+              >Roadmaps, articles, and useful resources to help you choose a career path, start your journey, and grow in tech. 
             </p>
           </div>
 
