--- a/html/contribute.html
+++ b/html/contribute.html
@@ -220,20 +220,19 @@
 
           <!-- attribution -->
           <div class="sections attribution">
+            <p>
+              This project is OpenSource and is hosted on <a class="paragraph-links" href="#">GitHub</a>. All meaningful contributions are welcome to help grow this project and you don't need to know how to code to contribute.</p
+            >
             <p
-              ><a class="paragraph-links" href="/">Tech Roadmap</a> is created
-              by
-              <a class="paragraph-links" href="https://github.com/timonwa"
-                >Timonwa</a
-              ></p
+              >If you would like to contribute to this project, please visit our <a class="paragraph-links" href="#">contributors page</a> to find out how to contribute.</p
             >
           </div>
 
           <!-- website quote -->
           <div class="sections quote">
             <p
-              >Roadmaps, articles and resources to help you choose a career
-              path, start your journey and grow in tech.
+              >Roadmaps, articles, and useful resources to help you choose a career
+              path, start your journey, and grow in tech.
             </p>
           </div>
 
